--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     			</div>
     			<div class="col">
     				<span>2006 - 2008</span>
-    				<h6>dfbbff ehbfbdhbf feuhbfubdbf fbsufbvewf jhewhbuyfgygef dbfuygeuywgf fweeyfguyf</h6>
+    				<h6>Educational Purpose project, For public Welfaref</h6>
     			</div>
     		</div>
     	</div>
